--- a/2021/FSARankings2021DisplayV2_files/stylesheet.css
+++ b/2021/FSARankings2021DisplayV2_files/stylesheet.css
@@ -77,19 +77,8 @@ td
 .xl69
 	{mso-style-parent:style0;
 	font-size:9.0pt;
-	mso-number-format:"d\/m\/yy\;\@";
-	text-align:center;
-	vertical-align:middle;}
-.xl70
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	text-align:center;
-	vertical-align:middle;}
-.xl71
-	{mso-style-parent:style0;
-	font-size:9.0pt;
 	mso-number-format:"0\.0";}
-.xl72
+.xl70
 	{mso-style-parent:style0;
 	color:white;
 	font-size:9.0pt;
@@ -101,7 +90,7 @@ td
 	border-left:none;
 	background:#305496;
 	mso-pattern:#305496 none;}
-.xl73
+.xl71
 	{mso-style-parent:style0;
 	color:white;
 	font-size:9.0pt;
@@ -113,12 +102,32 @@ td
 	border-left:none;
 	background:#305496;
 	mso-pattern:#305496 none;}
-.xl74
+.xl72
 	{mso-style-parent:style0;
 	text-align:center;
 	vertical-align:middle;}
-.xl75
+.xl73
+	{mso-style-parent:style0;
+	font-size:9.0pt;
+	mso-number-format:"0\.0";
+	border-top:.5pt solid #D9E1F2;
+	border-right:none;
+	border-bottom:.5pt solid #D9E1F2;
+	border-left:none;}
+.xl74
 	{mso-style-parent:style0;
 	font-size:8.0pt;
 	mso-number-format:"\[$-C09\]d\\ mmmm\\ yyyy\;\@";
 	text-align:center;}
+.xl75
+	{mso-style-parent:style0;
+	font-size:9.0pt;
+	mso-number-format:"d\/m\/yy\;\@";}
+.xl76
+	{mso-style-parent:style0;
+	font-size:9.0pt;
+	mso-number-format:0;
+	border-top:.5pt solid #D9E1F2;
+	border-right:none;
+	border-bottom:.5pt solid #D9E1F2;
+	border-left:none;}
