--- a/2021/FSARankings2021DisplayV2_files/stylesheet.css
+++ b/2021/FSARankings2021DisplayV2_files/stylesheet.css
@@ -117,17 +117,24 @@ td
 .xl74
 	{mso-style-parent:style0;
 	font-size:9.0pt;
-	mso-number-format:"d\/m\/yy\;\@";}
-.xl75
-	{mso-style-parent:style0;
-	font-size:9.0pt;
 	mso-number-format:0;
 	border-top:.5pt solid #D9E1F2;
 	border-right:none;
 	border-bottom:.5pt solid #D9E1F2;
 	border-left:none;}
-.xl76
+.xl75
 	{mso-style-parent:style0;
 	font-size:8.0pt;
 	mso-number-format:"\[$-C09\]d\\ mmmm\\ yyyy\;\@";
 	text-align:center;}
+.xl76
+	{mso-style-parent:style0;
+	font-size:9.0pt;
+	text-align:center;
+	vertical-align:middle;}
+.xl77
+	{mso-style-parent:style0;
+	font-size:9.0pt;
+	mso-number-format:"d\/m\/yy\;\@";
+	text-align:center;
+	vertical-align:middle;}
