--- a/2021/FSARankings2021DisplayV2_files/stylesheet.css
+++ b/2021/FSARankings2021DisplayV2_files/stylesheet.css
@@ -138,3 +138,12 @@ td
 	font-size:8.0pt;
 	mso-number-format:"\[$-C09\]d\\ mmmm\\ yyyy\;\@";
 	text-align:center;}
+.xl78
+	{mso-style-parent:style0;
+	font-size:9.0pt;
+	text-align:center;}
+.xl79
+	{mso-style-parent:style0;
+	font-size:9.0pt;
+	mso-number-format:"d\/m\/yy\;\@";
+	text-align:center;}
