--- a/2021/FSARankings2021DisplayV2_files/stylesheet.css
+++ b/2021/FSARankings2021DisplayV2_files/stylesheet.css
@@ -125,24 +125,17 @@ td
 .xl75
 	{mso-style-parent:style0;
 	font-size:9.0pt;
-	text-align:center;
-	vertical-align:middle;}
+	mso-number-format:"d\/m\/yy\;\@";}
 .xl76
-	{mso-style-parent:style0;
-	font-size:9.0pt;
-	mso-number-format:"d\/m\/yy\;\@";
-	text-align:center;
-	vertical-align:middle;}
-.xl77
 	{mso-style-parent:style0;
 	font-size:8.0pt;
 	mso-number-format:"\[$-C09\]d\\ mmmm\\ yyyy\;\@";
 	text-align:center;}
-.xl78
+.xl77
 	{mso-style-parent:style0;
 	font-size:9.0pt;
 	text-align:center;}
-.xl79
+.xl78
 	{mso-style-parent:style0;
 	font-size:9.0pt;
 	mso-number-format:"d\/m\/yy\;\@";
